pkg/provider/kubernetes/ingress/fixtures/Ingress-with-unknown-service-port-name.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ""
  namespace: testing

spec:
  rules:
  - host: traefik.tchouk
    http:
      paths:
      - path: /bar
        backend:
          service:
            name: service1
            port:
              name: toto
        pathType: Prefix

---
kind: Service
apiVersion: v1
metadata:
  name: service1
  namespace: testing

spec:
  ports:
    - port: 80
  clusterIP: 10.0.0.1

---
kind: Endpoints
apiVersion: v1
metadata:
  name: service1
  namespace: testing

subsets:
  - addresses:
      - ip: 10.11.0.1
      - ip: 10.11.0.2
    ports:
      - port: 8089

---
kind: EndpointSlice
apiVersion: discovery.k8s.io/v1
metadata:
  name: service1-abc
  namespace: testing
  labels:
    kubernetes.io/service-name: service1

addressType: IPv4
ports:
  - port: 8089
    name: ""
endpoints:
  - addresses:
      - 10.11.0.1
      - 10.11.0.2
    conditions:
      ready: true
